# projeto_final_embarcatech

./: CMakeLists.txt  FreeRTOSConfig.h  Readme.md  display.c  laser_distance.c  lwipopts.h  servo.h  wifi_credentials.h
mpu6050/: mpu6050.h
src/: main.c  ws2812.pio
src/drivers/mpu6050/: mpu6050.c
src/drivers/servo/: servo.c
